--- a/monografia/Conteudo/Desenvolvimento/ServidorLocal/drivers.tex
+++ b/monografia/Conteudo/Desenvolvimento/ServidorLocal/drivers.tex
@@ -1,4 +1,4 @@
-\section{\emph{Drivers}}
+\subsection{Drivers}
 
 Os \emph{drivers} são responsáveis por traduzir os comandos do sistema para os dispositivos, de forma que cada dispositivo no \emph{Opus} está
 associado a um \emph{driver} específico, desta forma, quando o usuário pedir que um determinado dispositivo seja ligado, por exemplo,
