--- a/monografia/monografia.tex
+++ b/monografia/monografia.tex
@@ -53,6 +53,8 @@
     \include{Conteudo/Desenvolvimento/sistema.tex}
 
     \include{Conteudo/Desenvolvimento/ServidorLocal/introducao.tex}
+    \include{Conteudo/Desenvolvimento/ServidorLocal/interfaces.tex}
+    \include{Conteudo/Desenvolvimento/ServidorLocal/drivers.tex}
     %--------------------------------------------------------------
 
     %--------------------------------------------------------------
