--- a/monografia/Conteudo/Desenvolvimento/ServidorLocal/introducao.tex
+++ b/monografia/Conteudo/Desenvolvimento/ServidorLocal/introducao.tex
@@ -8,7 +8,7 @@ O \emph{Opus} é uma aplicação escrita em Python visando convergir a operaçã
 fabricantes e protocolos em um único ponto de controle, tal funcionalidade é obtida a partir da natureza modular
 do Python que foi aqui aproveitada para criar partes expansíveis do sistema, chamadas de \emph{drivers} e \emph{interfaces}.
 
-A aplicação é organizada em quatro módulos principais, como ilustrado na figura \ref{fig:opus1}, são eles:
+A aplicação é organizada em quatro módulos principais, como ilustrado na figura~\ref{fig:opus1}, são eles:
 \begin{figure}[h!]
     \conteudoFigura
     [Elaborado pelo Autor (2025)]
@@ -18,21 +18,7 @@ A aplicação é organizada em quatro módulos principais, como ilustrado na fig
     {fig:opus1}
 \end{figure}
 
-\emph{Interfaces}, módulos que adicionam uma forma de comunicação ao \emph{Opus}, como, por exemplo, uma \emph{interface} para comunicação com dispositivos ZigBee\ref{sec:zigbee}, ou KNX\ref{sec:knx};
+\emph{Interfaces}, módulos que adicionam uma forma de comunicação ao \emph{Opus}, como, por exemplo, uma \emph{interface} para comunicação com dispositivos ZigBee[\ref{sec:zigbee}], ou KNX[\ref{sec:knx}];
 \emph{Drivers}, responsáveis por traduzir os comandos do \emph{Opus} para o protocolo do dispositivo, podendo ou não utilizar alguma \emph{interface} própria para esta finalidade;
 \emph{Managers}, são módulos da aplicação que gerenciam seu funcionamento, recebem, enviam e processam comandos vindos do Servidor Remoto e por fim,
 o banco de dados.
-
-Módulos como \emph{drivers} e \emph{interfaces} terão seus objetos carregados no ambiente de execução do \emph{Opus}
-via um dicionário, onde a chave é o nome do módulo e o valor é objeto.
-Sendo assim para acessar um \emph{driver} ou \emph{interface} basta acessar o dicionário com o nome do módulo como no exemplo
-a seguir:
-\begin{lstlisting}[language=Python]
-    interfaces['nome_da_interface'].metodo_desejado()
-\end{lstlisting}
-
-\subsection{Interfaces}
-A fim de ser uma aplicação modular, que pode se comunicar com diversos dispositivos, foi necessário levar em conta a vasta 
-gama de protocolos existentes hoje no mercado, sejam de dispositivos IoT com fins de automação residencial, ou equipamentos industriais
-de automação de edifícios. Para preencher essa lacuna, foi criado o conceito de \emph{Interfaces}.
-
