--- a/monografia/monografia.tex
+++ b/monografia/monografia.tex
@@ -52,9 +52,11 @@
     % Parte III - Desenvolvimento
     \include{Conteudo/Desenvolvimento/sistema.tex}
 
-    \include{Conteudo/Desenvolvimento/ServidorLocal/introducao.tex}
-    \include{Conteudo/Desenvolvimento/ServidorLocal/interfaces.tex}
-    \include{Conteudo/Desenvolvimento/ServidorLocal/drivers.tex}
+    \include{Conteudo/Desenvolvimento/ServidorLocal/servidor_local.tex}
+
+    %\include{Conteudo/Desenvolvimento/ServidorLocal/introducao.tex}
+    %\include{Conteudo/Desenvolvimento/ServidorLocal/interfaces.tex}
+    %\include{Conteudo/Desenvolvimento/ServidorLocal/drivers.tex}
     %--------------------------------------------------------------
 
     %--------------------------------------------------------------
