--- a/monografia/Conteudo/Desenvolvimento/ServidorLocal/drivers.tex
+++ b/monografia/Conteudo/Desenvolvimento/ServidorLocal/drivers.tex
@@ -15,12 +15,31 @@ Em casos onde o dispositivo se comunica via um protocolo não suportado nativame
 requerem uma camada física diferente das utilizadas pelo protocolo TCP/IP, como Serial, ou até mesmo que utilizam TCP/IP, 
 porém não HTTP, como o MQTT, é possível que \emph{Driver}s acessem as \emph{Interfaces} para realizar a comunicação com o dispositivo.
 
+\begin{figure}[h!]
+    \conteudoFigura
+    [Elaborado pelo Autor (2025)]
+    {0.2}
+    {driver_example.png}
+    {Exemplo de Driver}
+    {fig:driver-example}
+\end{figure}
+
 Para ser considerado um \emph{Driver}, o pacote deve seguir um padrão de nomenclatura e implementar algumas funções esperadas.
 O pacote e o módulo principal devem ter o mesmo nome; o módulo principal deve ter implementado uma função ``\lstinline{start()}'' sem retornos,
 essa função será chamada no momento em que o \emph{Driver} for carregado; o módulo principal deve ter um dicionário global de 
-\emph{Interfaces} com a seguinte assinatura: \lstinline{interfaces: dict[str, Any}, em caso do \emph{Driver} necessitar de uma \emph{Interface},
+\emph{Interfaces} com a seguinte assinatura: \lstinline{interfaces: dict[str, Any]}, em caso do \emph{Driver} necessitar de uma \emph{Interface},
 o nome dela deve estar presente neste dicionário e o \emph{Opus} injetará o objeto da \emph{Interface} neste dicionário,
 permitindo que o \emph{Driver} a acesse.
+
+Como \emph{Drivers} comandam toda a comunicação com os dispositivos, toda a estrutura de um dispositivo, assim como a lógica de controle
+ficam a cargo do \emph{Driver}. Eles são autônomos e podem funcionar como aplicações independentes, dando liberdade de implementar a lógicas
+singulares não importando sua complexidade, todavia, é importante que o \emph{Driver} siga o padrão esperado pelo \emph{Opus} em classes
+voltadas para a comunicação com dispositivos.
+
+\subsubsection{A Classe de Dispositivos}
+A forma mais simples de abstrair um dispositivo é via uma classe.\ \emph{Drivers} tem liberdade total para implementar a classe dos dispositivos,
+sendo necessário apenas que essa classe seja herdeira da classe genérica de dispositivos do \emph{Opus}, que contém os métodos esperados para 
+o controle dos dispositivos através da aplicação.
 
 
 
