--- a/monografia/Conteudo/Comeco/RevisaoBibliografica/internet-das-coisas.tex
+++ b/monografia/Conteudo/Comeco/RevisaoBibliografica/internet-das-coisas.tex
@@ -41,14 +41,14 @@ geralmente um sistema IoT é formado por três camadas, sendo elas:
     \conteudoFigura
     [\citeonline{statista-iot-connected-devices}]         % Fonte   
     {0.3}                               % scale: 0.01 - 1
-    {statistic_id1183457.jpg}                 % filename. A figura deve estar na pasta Imagens
-    {Números de dispositivos IoT conectados no mundo de 2019 à 2023}     % Texto
+    {statistic_id1183457-2.png}                 % filename. A figura deve estar na pasta Imagens
+    {Números de dispositivos IoT conectados no mundo de 2022 a 2023, com previsões de 2024 a 2033}     % Texto
     {fig:statistic_01}                      % identificador da figura
 \end{figure}
 
 Segundo a empresa especializada em coleta de dados, Statista, 
-a quantidade de dispositivos \verb'IoT' conectados no mundo passa de 15 bilhões em 
-2023 com projeção para quase o dobro deste número até o fim da década 
+a quantidade de dispositivos \verb'IoT' conectados no mundo passa de 18 bilhões em 
+2024 com projeção para quase o dobro deste número até o fim da década 
 \cite{statista-iot-connected-devices} como mostrado na figura~\ref{fig:statistic_01}. 
 
 Isso se deve muito ao fato de que sensores e microcontroladores ficaram mais baratos, o 
