--- a/monografia/Conteudo/Comeco/introducao.tex
+++ b/monografia/Conteudo/Comeco/introducao.tex
@@ -33,16 +33,13 @@ Considerando que dispositivos IoT de Casas Inteligentes são mais acessíveis e 
 mas não são viáveis em edifícios coletivos devido à necessidade de múltiplos usuários compartilharem o mesmo ambiente, como é possível adaptá-los
 para o uso em edifícios coletivos, garantindo controle adequado para múltiplos ocupantes?
 
-Dado que dispositivos IoT de Casas Inteligentes são mais acessíveis e fáceis de implementar do que os sistemas tradicionais de automação predial, 
-como é possível adaptá-los para o uso em edifícios coletivos, garantindo segurança e controle adequado para múltiplos ocupantes?
-
 % Justificativa
 
 % Objetivo Geral
 \section{Objetivos}
 \subsection{Objetivo Geral}
-Este trabalho visa desenvolver um sistema básico que demonstre a viabilidade de múltiplos usuários operarem simultaneamente 
-um sistema de edifício inteligente.
+Este trabalho visa desenvolver um sistema básico que demonstre a viabilidade da operação simultânea de múltiplos usuários
+em um edifício inteligente. A proposta é criar uma solução funcional que atenda a múltiplos usuários em um ambiente compartilhado. 
 
 % Objetivos Específicos	
 \subsection{Objetivos Específicos}
@@ -63,16 +60,13 @@ Dentre os principais objetivos específicos destacam-se:
 \section{Estrutura do Trabalho}
 Este trabalho está organizado com a seguinte estrutura:
 
-\textbf{Capítulo 2}: Revisão Bibliográfica, onde são apresentados\dots
+\textbf{Capítulo 2}: Revisão Bibliográfica, apresenta o contexto histórico dos edifícios inteligentes e uma introdução 
+as tecnologias utilizadas\dots
 
-\textbf{Capítulo 3}: Arquitetura do Sistema\dots.
+\textbf{Capítulo 3}: Sistema Opus, onde serão apresentados os componentes
+do sistema proposto, sua arquitetura e funcionalidades
 
-\textbf{Capítulo 4}: Dispositivo IoT\dots
+\textbf{Capítulo 4}: Testes e Resultados, onde serão apresentados os testes realizados após a
+implementação do sistema proposto.
 
-\textbf{Capítulo 5}: Servidor Local\dots
-
-\textbf{Capítulo 6}: Servidor Remoto\dots
-
-\textbf{Capítulo 7}: Interface de Usuário\dots
-
-\textbf{Capítulo 8}: Conclusão\dots
+\textbf{Capítulo 5}: Conclusão e considerações finais.
