--- a/monografia/Conteudo/Desenvolvimento/ServidorLocal/interfaces.tex
+++ b/monografia/Conteudo/Desenvolvimento/ServidorLocal/interfaces.tex
@@ -1,4 +1,4 @@
-\subsection{Interfaces}
+\subsection{\textbf{Interfaces}}
 \label{opus-sec:interfaces}
 
 A fim de ser uma aplicação modular, que pode se comunicar com diversos dispositivos, foi necessário levar em conta a vasta 
