--- a/monografia/Conteudo/bibliografia.bib
+++ b/monografia/Conteudo/bibliografia.bib
@@ -357,10 +357,10 @@ and Building Management},
 
 @misc{statista-iot-connected-devices,
   author = {Statista},
-  title = {Number of Internet of Things (IoT) connected devices worldwide from 2019 to 2023, with forecasts from 2022 to 2030},
-  year = {2023},
+  title = {Number of Internet of Things (IoT) connections worldwide from 2022 to 2023, with forecasts from 2024 to 2033},
+  year = {2024},
   url = {https://www.statista.com/statistics/1183457/iot-connected-devices-worldwide/},
-  urldate = {18 de dezembro de 2023}
+  urldate = {10 de março de 2025}
 }
 
 @article{microsoft1,
