--- a/monografia/monografia.tex
+++ b/monografia/monografia.tex
@@ -18,8 +18,8 @@
     %                    PRETEXTUAL                             %
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     \input{Automatico/capa}
-    \input{Automatico/folhaRosto}
-    \input{Automatico/aprovacao}
+    %\input{Automatico/folhaRosto}
+    %\input{Automatico/aprovacao}
 
     %\input{Conteudo/Prologo/dedicatoria}
     %\input{Conteudo/Prologo/agradecimentos}
@@ -39,38 +39,38 @@
     %--------------------------------------------------------------
     % Parte I - Introdução
     %--------------------------------------------------------------
-    \include{Conteudo/Comeco/introducao.tex}
+    \include{Conteudo/Comeco/introducao}
 
     %--------------------------------------------------------------
     % Parte II - Revisão Bibliográfica
     %--------------------------------------------------------------
-    \include{Conteudo/Comeco/RevisaoBibliografica/edificio-inteligente.tex}
-    \include{Conteudo/Comeco/RevisaoBibliografica/internet-das-coisas.tex}
-    \include{Conteudo/Comeco/RevisaoBibliografica/tecnologias.tex}
+    \include{Conteudo/Comeco/RevisaoBibliografica/edificio-inteligente}
+    \include{Conteudo/Comeco/RevisaoBibliografica/internet-das-coisas}
+    \include{Conteudo/Comeco/RevisaoBibliografica/tecnologias}
     
     %--------------------------------------------------------------
     % Parte III - Desenvolvimento
-    \include{Conteudo/Desenvolvimento/sistema.tex}
+    \include{Conteudo/Desenvolvimento/sistema}
 
-    \include{Conteudo/Desenvolvimento/ServidorLocal/servidor_local.tex}
+    \include{Conteudo/Desenvolvimento/ServidorLocal/servidor_local}
 
-    %\include{Conteudo/Desenvolvimento/ServidorLocal/introducao.tex}
-    %\include{Conteudo/Desenvolvimento/ServidorLocal/interfaces.tex}
-    %\include{Conteudo/Desenvolvimento/ServidorLocal/drivers.tex}
+    %\include{Conteudo/Desenvolvimento/ServidorLocal/introducao}
+    %\include{Conteudo/Desenvolvimento/ServidorLocal/interfaces}
+    %\include{Conteudo/Desenvolvimento/ServidorLocal/drivers}
     %--------------------------------------------------------------
 
     %--------------------------------------------------------------
     % Parte IV - Conclusão
     %--------------------------------------------------------------
-    %\include{Conteudo/Conclusao/resultados.tex}      % Novo arquivo: Resultados
-    %\include{Conteudo/Conclusao/conclusao.tex}         % Novo arquivo: Conclusão
-    %\include{Conteudo/Conclusao/trabalhos_futuros.tex} % Novo arquivo: Trabalhos Futuros
+    %\include{Conteudo/Conclusao/resultados}      % Novo arquivo: Resultados
+    %\include{Conteudo/Conclusao/conclusao}         % Novo arquivo: Conclusão
+    %\include{Conteudo/Conclusao/trabalhos_futuros} % Novo arquivo: Trabalhos Futuros
 
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     %                    PÓS-TEXTUAL                            %
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     \bibliography{Conteudo/bibliografia}
     
-    %\include{Conteudo/Anexos/anexos.tex}  % Novo arquivo: Anexos
+    %\include{Conteudo/Anexos/anexos}  % Novo arquivo: Anexos
 
 \end{document}
